--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           </div>
 
           <!-- Replace action URL with your form provider (Mailchimp/Beehiiv/ConvertKit/etc.) -->
-          <form action="#" method="post" onsubmit="return fakeSubmit(event)">
+<form action="mailto:alex@kairu.tech" method="post" enctype="text/plain">
             <input type="email" name="email" placeholder="you@example.com" required />
             <button class="btn primary" type="submit">Send me the checklist</button>
           </form>
