--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
       <section class="section section-alt" id="recommended" aria-label="Recommended services">
         <h2>Recommended essentials</h2>
         <p>
-          Start with these basics. Swap the placeholders with your real affiliate links when you’re ready.
+          Start with these essentials — chosen to work well for newcomers to Spain.
         </p>
 
         <div class="grid">
